css/style.css
/*general*/
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    word-wrap: break-word;
}

html {
    font-family: Futura;
    height: 100%;
    color: #d3d3d3;
    background-color: #181818;
}

a {
    color: #d3d3d3;
    text-decoration: none;
}

.centered {
    text-align: center;
}

.container {
    /*max-width: 100vw;*/
    /*margin: 0 auto;*/
    /*overflow: auto;*/


    max-width: 1100px;
    margin: 0 auto;
    overflow: auto;
    padding: 0 40px;
}

/*header*/

.header {
    font-size: 5rem;
    background-color: #333333;

    text-shadow: 0.035em 0.035em 0 #333333;
}


/*body*/

ul {
    margin: 0;
    padding: 0;
    width: 80vw;
    height: 80vh;
    list-style-type: none;

    /*grid*/
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

li {
    margin: 10px 2.5vw;
    padding: 10px;
    font-size: 3rem;


    /*flex*/
    display: flex;
    flex-direction: column;
    align-items: center;

    /*card*/
    background-color: #4f4f4f;
    border-radius: 10px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
}


li img {
    padding: 10px;
    max-width: 100px;
    max-height: 100px;
}


.checked {
    color: lightgreen;
    font-size: 5rem;
}

.unChecked {
    color: lightcoral;
    font-size: 5rem;
}

/*keuzes page*/
.context {
    padding: 20px;
    margin: 20px 0;
    background-color: #4f4f4f;
    color: white;

    border-radius: 10px;
}

.context img {
    width: 100%;
    max-width: 300px;
}

.keuzesContainer {
    position: center;
}

.keuzes {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    justify-content: center;
    align-content: center;
}

.keuzesBtn {
    padding: 50px 0;
    margin: 10px;
    font-size: 3rem;
    color: #333333;

    border: 5px solid #333333;
    border-radius: 20px;
}

.red {
    background-color: lightcoral;
}

.green {
    background-color: lightgreen;
}

.blue {
    background-color: lightblue;
}

.yellow {
    background-color: lightyellow;
}


/*navigation menu*/

.nav {

    /*flex*/
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;

    /*positioning*/
    position: fixed;
    bottom: 0;
    width: 100vw;
    height: 10vw;
    padding: 10px;

    /*color*/
    color: white;
    background-color: #333333;
    box-shadow: inset 0px -5px 10px 0px rgba(0, 0, 0, 0.5);

    /*text*/
    font-size: 4rem;
    overflow-wrap: break-word;
}

.navBtn {
    /*padding: 10px;*/
    margin: 0 10px;
    background-color: #4f4f4f;
    box-shadow: 0 5px 0 black;
    border-radius: 10px;
}

.navLink {
    display: flex;
    width: 3em;
    justify-content: center;
    align-items: center;
}

.redText p {
    display: none;
}

.greenText p {
    display: none;
}

.blueText p {
    display: none;
}

@media only screen and (min-width: 992px) {
    .header {
        font-size: 2rem;
    }

    .container {
        margin-left: 100px;
    }

    /*polls menu */
    ul {

    }


    li {
        font-size: 1rem;

        margin: 10px;
    }

    /*navigation menu*/
    .nav {
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;

        height: 100vh;
        width: 10vh;
        left: 0;
        font-size: 1rem;

        box-shadow: none;
    }

    .navBtn {
        margin: 20px 0;
    }

    .navLink {
        height: 3em;
    }

    /*hover effects*/
    .redText:hover p{
        display: inline;
    }

    .greenText:hover p {
        display: inline;

    }

    .blueText:hover p {
        display: inline;

    }


    .redText:hover {

        transition: ease-in-out 0.2s;
        background-color: #454545;
        color: lightcoral;

        border-radius: 10px;

        width: 100px;
    }

    .greenText:hover {
        transition: ease-in-out 0.2s;
        background-color: #454545;
        color: lightgreen;

        border-radius: 10px;

        width: 100px;


    }

    .blueText:hover {
        transition: ease-in-out 0.2s;
        background-color: #454545;
        color: lightblue;

        border-radius: 10px;

        width: 100px;
    }

}

